--- a/front_src/src/sass/main.scss
+++ b/front_src/src/sass/main.scss
@@ -1,13 +1,15 @@
-//variables and mixins
-@import "core/variables.scss";
-@import "core/mixins.scss";
-
-// Reset and dependencies
+ // Reset and dependencies
 @import "core/fonts.scss";
 @import "core/general.scss";
 
 // Components
-// @import "components/botoes.scss";
+@import "components/progress-bar.scss";
+@import "components/cards.scss";
+@import "components/waves.scss";
+@import "components/tooltip.scss";
+@import "components/buttons.scss";
+@import "components/timeline.scss";
+@import "components/articles.scss";
 // @import "components/dropdown.scss";
 // @import "components/labels.scss";
 // @import "components/paginator.scss";
@@ -16,7 +18,9 @@
 // @import "components/utilidades.scss";
 
 // Templates
-@import "pages/home.scss";
+@import "templates/header.scss";
+@import "templates/sidebar.scss";
+@import "templates/footer.scss";
 
 // Pages
 @import "pages/home.scss";
