--- a/front_src/src/postcss/core/_general.css
+++ b/front_src/src/postcss/core/_general.css
@@ -1,20 +1,15 @@
 *,*:before,*:after{
-	@include boxSizing;
+	box-sizing: border-box;
 }
 
-html, body {
+html{
+	font-size: $font-size-base;	
 	height: 100%;
 }
 
 body {
-	background-color: #DFDFDF;
 	font-family: $font;
-	font-size: $font-size-base;
-	color: darken($color-grey,20%);
-}
-
-main{
-	margin-top: -$margin-base*3;
+	height: 100%;
 }
 
 a{
@@ -29,43 +24,7 @@ img{
 	max-width: 100%;
 }
 
-section{
-	background-color: $color-white;
-	margin-bottom: $margin-base*2;
-	@include z-depth(1);
-}
 
 .wrap{
-	@include cf;
-	@include center(1280px);
-	padding: $padding-base;
-}
-
-.list{
-	@include cf;
-	@extend teste;
-}
-
-.mike{
-	@extend teste;
-}
-
-.section-title{
-	display: block;
-	width: 100%;
-	margin: $margin-base*2 0;
-	@include cf;
-
-	h1{
-		display: inline-block;
-		margin: 0;
-		padding: 0 1rem;
-		color: $color-grey-dark;
-		text-transform: uppercase;
-
-		i{
-			font-size: $font-size * 2
-		}
-	}
 	
 }
